--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Game Skeleton <%= htmlWebpackPlugin.options.version %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
